Fix Dockerfile and prime_checker

--- a/prime/Dockerfile
+++ b/prime/Dockerfile
@@ -1,5 +1,5 @@
-FROM pypy
+FROM pypy:3
 WORKDIR /app
 COPY prime_checker.py .
 
-ENTRYPOINT ["pypy", "prime_checker.py"]
+ENTRYPOINT ["pypy3", "prime_checker.py"]
